--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -1,4 +1,4 @@
-name: Sample 01 - Build an image
+name: Build an image
 
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
@@ -15,7 +15,7 @@ jobs:
   # This workflow contains a single job called "build"
   build_push_image:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: pe-arc-runner-shared-npd
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -35,7 +35,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          tags: ${{secrets.ACR_NAME}}/ratings-web:latest
+          tags: ${{secrets.ACR_NAME}}/ratings-web:v1
           push: true
           
       
