--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -1,20 +1,14 @@
 name: Build an image
 
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build_push_image:
-    # The type of runner that the job will run on
     runs-on: pe-arc-runner-shared-npd
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -25,17 +19,25 @@ jobs:
         uses: docker/setup-buildx-action@v1    
       
       - name: Docker Login
-        uses: docker/login-action@v1.10.0
+        uses: docker/login-action@v2
         with:
-          registry: ${{ secrets.ACR_NAME }}
-          username: ${{ secrets.ACR_LOGIN }}
-          password: ${{ secrets.ACR_PASSWORD }}
+          registry: ${{ vars.REGISTRY }}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_SECRET }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: "${{ vars.REGISTRY }}/${{ env.IMAGE_NAME }}"    
           
       - name: Build and push staging images
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
-          context: .
+          context: ./
           tags: ${{secrets.ACR_NAME}}/ratings-web:v1
           push: true
+          labels: ${{ steps.meta.outputs.labels }}
+          build-args: GITHUB_PAT=${{ secrets.GH_IAC_PAT }}
           
       
